<resources>
    <string name="app_name">SensusApp</string>
    <string name="welcome">Halo, Selamat Datang!</string>
    <string name="subtitle_welcome">Aplikasi Sensus Penduduk</string>
    <string name="title_card_jumlah">jumlah</string>
    <string name="title_kartu_keluarga">Kartu Keluarga</string>
    <string name="total_kartuKel">2.567</string>
    <string name="laki_laki">Laki-laki</string>
    <string name="jumlah_laki">1.567</string>
    <string name="perempuan">Perempuan</string>
    <string name="total_perempuan">1.567</string>
    <string name="subtitle_pencarian">Cari Data berdasarkan NO.KK</string>
    <string name="title_data_baru">Data Terbaru</string>
    <string name="button_tambah_data">+ Tambah Data</string>
    <string name="title_temukan_data">Temukan Data</string>
    <string name="detail_kartu_keluarga">Detail Kartu Keluarga</string>
    <string name="detail_no_kartu_keluarga">No. Kartu Keluarga</string>
    <string name="nokk">180293810823091823473</string>
    <string name="txt_cari_data">Cari Data</string>
    <string name="email_hint">johndoe@mail.com</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="password_hint">password</string>
    <string name="txt_btn_login">LOGIN</string>
</resources>
