<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimaryLight"
    android:paddingHorizontal="16dp"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="340dp"
        android:text="@string/txt_email"
        android:textColor="#fff"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email_hint"
        android:background="@drawable/custom_edittext"
        android:textSize="12sp"
        android:inputType="text"
        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txt_password"
        android:textColor="#fff"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edittext"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:textSize="12sp"
        android:textStyle="bold"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginTop="32dp"
        android:background="@color/colorPrimary"
        android:text="@string/txt_btn_login"
        android:textColor="@color/white"
        android:textStyle="bold" />

</LinearLayout>