<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".HomeActivity">

    <View
        android:id="@+id/viewHome"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:paddingHorizontal="20dp"
        android:background="@color/colorPrimary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_slmt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/welcome"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/viewHome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_slmt"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="20dp"
        android:text="@string/subtitle_welcome"
        android:textSize="10sp"
        android:textColor="#ffffff"
        tools:ignore="SmallSp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_home"
        android:layout_width="0dp"
        android:layout_height="172dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="123dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/background_home"
        android:elevation="4dp"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_home"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_kk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/constraint_home"
                app:layout_constraintTop_toTopOf="@id/constraint_home"
                android:layout_marginTop="24dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_folder_shared_black_24dp"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_jumlah"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/constraint_home"
                app:layout_constraintStart_toEndOf="@+id/icon_kk"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/title_card_jumlah"
                android:textSize="8sp"
                tools:ignore="SmallSp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_kartukel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/icon_kk"
                app:layout_constraintTop_toBottomOf="@id/tv_jumlah"
                android:layout_marginStart="16dp"
                android:layout_marginTop="2dp"
                android:text="@string/title_kartu_keluarga"
                android:textSize="14sp"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/constraint_home"
                app:layout_constraintTop_toTopOf="@id/constraint_home"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/total_kartuKel"
                android:textStyle="bold"
                android:textSize="24sp"
                />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:orientation="vertical"
                android:background="#D4DFE3"
                app:layout_constraintStart_toStartOf="@id/constraint_home"
                app:layout_constraintEnd_toEndOf="@id/constraint_home"
                app:layout_constraintTop_toBottomOf="@id/tv_kartukel"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="20dp"
                />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="64dp"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="@id/constraint_home"
                app:layout_constraintEnd_toEndOf="@id/guidelineHome"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginVertical="20dp"
                app:cardBackgroundColor="#D4DFE3"
                app:cardElevation="0dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_jenis"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:layout_margin="1dp"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon_laki"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/constraint_jenis"
                        app:layout_constraintTop_toTopOf="@id/constraint_jenis"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_icon_man_32px"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_laki"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/icon_laki"
                        app:layout_constraintTop_toTopOf="@id/constraint_jenis"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/laki_laki"
                        android:textSize="8sp"
                        tools:ignore="SmallSp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@+id/icon_laki"
                        app:layout_constraintTop_toBottomOf="@id/tv_laki"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/jumlah_laki"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="64dp"
                app:layout_constraintTop_toBottomOf="@id/divider"
                app:layout_constraintStart_toStartOf="@id/guidelineHome"
                app:layout_constraintEnd_toEndOf="@id/constraint_home"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                app:cardBackgroundColor="#D4DFE3"
                app:cardElevation="0dp"
                >

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraint_jenisPr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#ffffff"
                    android:layout_margin="1dp"
                    >

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/icon_perempuan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/constraint_jenisPr"
                        app:layout_constraintTop_toTopOf="@id/constraint_jenisPr"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:src="@drawable/ic_icon_girl_32px"
                        />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_perempuan"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/icon_perempuan"
                        app:layout_constraintTop_toTopOf="@id/constraint_jenisPr"
                        android:layout_marginTop="16dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/perempuan"
                        android:textSize="8sp"
                        tools:ignore="SmallSp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@+id/icon_perempuan"
                        app:layout_constraintTop_toBottomOf="@id/tv_perempuan"
                        android:layout_marginTop="2dp"
                        android:layout_marginStart="16dp"
                        android:text="@string/total_perempuan"
                        android:textStyle="bold"
                        android:textSize="14sp"
                        />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    
    <androidx.cardview.widget.CardView
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardview_home"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_button_login"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardBackgroundColor="@color/colorPrimary"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintcari"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/constraintcari"
                app:layout_constraintTop_toTopOf="@id/constraintcari"
                android:layout_marginStart="20dp"
                android:layout_marginTop="22dp"
                android:src="@drawable/ic_bx_bx_search_alt_2"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_temukandata"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/icon_search"
                app:layout_constraintTop_toTopOf="@id/constraintcari"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/title_temukan_data"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="#ffffff"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/icon_search"
                app:layout_constraintTop_toBottomOf="@id/tv_temukandata"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/subtitle_pencarian"
                android:textSize="10sp"
                android:textColor="#ffffff"
                tools:ignore="SmallSp" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_dataterbaru"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_search"
        android:text="@string/title_data_baru"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        />
    
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerDataKK"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@id/tv_dataterbaru"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_tambah_data"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_tambah_data"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/button_tambah_data"
        android:textStyle="bold"
        android:textColor="#ffffff"
        android:background="@drawable/touch_effect_button_tambah"

        />

</androidx.constraintlayout.widget.ConstraintLayout>